[FIX] web: missing margin between two action buttons in footer

--- a/addons/web/static/src/scss/modal.scss
+++ b/addons/web/static/src/scss/modal.scss
@@ -34,6 +34,9 @@
                 // as direct children of the modal-footer as normally required
                 flex: 1 1 auto;
             }
+            .btn {
+                margin-right: 4px
+            }
         }
     }
 
